fixed bug on restaurant recommended and changed alignment for instructions on cant decide modal

--- a/app/styles/cant_decide.scss
+++ b/app/styles/cant_decide.scss
@@ -12,7 +12,7 @@
 
   .text {
     padding: 5px;
-    margin: 20% 10%;
+    margin: 5% 10%;
   }
 
   .dismiss-button {
